# deep-learning

homework1/: README.md  ml_tasks.json  pyproject.toml
homework1/MLtasks/cnn_lvl1_lenet_fashion_mnist/: task.py
homework1/MLtasks/cnn_lvl1_lenet_fashion_mnist/output/: metrics.json
homework1/MLtasks/cnn_lvl2_lenet_fashion_mnist_adamw/: task.py
homework1/MLtasks/cnn_lvl2_lenet_fashion_mnist_adamw/output/: metrics.json
homework1/MLtasks/cnn_lvl3_vggnet_fashion_mnist/: task.py
homework1/MLtasks/cnn_lvl4_resnet_transfer_fashion_mnist/: task.py
homework1_excellent/: README.md  ml_tasks.json  requirements.txt
homework1_excellent/MLtasks/gpu_perf_lvl1_cuda_core_vs_tensor_core_gemm/: task.py
homework2/: .gitignore  README.md  pyproject.toml
homework2/configs/: arch_only.yaml  arch_only_v2.yaml  baseline.yaml  combined_v2.yaml  train_only.yaml  train_only_v2.yaml  yolov8n_arch_modified.yaml
homework2/data/: coco_subset.yaml
homework2/notebooks/: 01_baseline_eval.ipynb  05_ablation_analysis.ipynb
homework2/results/: summary_table.csv
homework2/results/arch_only/: arch_only_coco_eval.json  coco_eval.json
homework2/results/arch_only_v2/: arch_only_v2_coco_eval.json  coco_eval.json
homework2/results/baseline/: baseline_coco_eval.json
homework2/results/combined_v2/: coco_eval.json  combined_v2_coco_eval.json
homework2/results/train_only/: coco_eval.json  train_only_coco_eval.json
homework2/results/train_only_v2/: coco_eval.json  train_only_v2_coco_eval.json
homework2/scripts/: train_baseline.py
(+4 files in other folders)
